--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "game": "tsx Juego.ts"
   },
   "dependencies": {
+    "chalk": "^5.6.2",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
